--- a/gnome/src/config/Makefile.am
+++ b/gnome/src/config/Makefile.am
@@ -13,7 +13,6 @@ libconfig_la_SOURCES = \
   accountconfigdialog.c \
   hooks-config.c \
   audioconf.c \
-  videoconf.c \
   utils.c \
   accountconfigdialog.h \
   accountlistconfigdialog.h \
@@ -27,14 +26,29 @@ libconfig_la_SOURCES = \
   utils.h \
   zrtpadvanceddialog.h
 
+if SFL_VIDEO
+libconfig_la_SOURCES+=videoconf.c videoconf.h
+endif
+
+if SFL_VIDEO
+SFL_VIDEO_LDFLAGS=@CLUTTER_LIBS@ @CLUTTERGTK_LIBS@
+endif
+
 libconfig_la_LDFLAGS = $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) $(GCONF_LDFLAGS) \
 					   $(GTK_LDFLAGS) $(GLIB_LDFLAGS) $(WEBKIT_LDFLAGS) \
-					   @CLUTTER_LIBS@ @CLUTTERGTK_LIBS@
+					   $(SFL_VIDEO_LDFLAGS) 
+
+if SFL_VIDEO
+SFL_VIDEO_LIBADD=@CLUTTER_LIBS@ @CLUTTERGTK_LIBS@
+endif
 
 libconfig_la_LIBADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) $(GCONF_LIBS) \
-					  $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) @CLUTTER_LIBS@ \
-					  @CLUTTERGTK_LIBS@
+					  $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) $(SFL_VIDEO_LIBADD)
+
+if SFL_VIDEO
+SFL_VIDEO_CFLAGS=@CLUTTER_CFLAGS@ @CLUTTERGTK_CFLAGS@
+endif
 
 libconfig_la_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) $(GCONF_CFLAGS) \
 					  $(GTK_CFLAGS) $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) \
-					  @CLUTTER_CFLAGS@ @CLUTTERGTK_CFLAGS@
+					  $(SFL_VIDEO_CFLAGS)
