* #8586: fixed make dist
make distcheck still broken because it can't write a backup file during
make check.

--- a/daemon/src/dbus/Makefile.am
+++ b/daemon/src/dbus/Makefile.am
@@ -36,6 +36,7 @@ noinst_HEADERS =            \
     dbusmanager.h           \
     networkmanager_proxy.h  \
     networkmanager.h        \
+    dbus_cpp.h        		\
     $(BUILT_SOURCES)
 
 # Dbus service file
