--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -26,9 +26,4 @@ EXTRA_DIST = README.gentoo \
 			 m4/lt~obsolete.m4 \
 			 m4/ltoptions.m4 \
 			 m4/ltsugar.m4 \
-			 m4/ltversion.m4 \
-			 images/logo_ico.png \
-			 images/sfl-logo.png \
-			 images/sflphone_logo.png \
-			 images/sflphone.png \
-			 images/tray-icon.png
+			 m4/ltversion.m4
