--- a/daemon/src/video/Makefile.am
+++ b/daemon/src/video/Makefile.am
@@ -11,7 +11,8 @@ libvideo_la_SOURCES = video_endpoint.cpp video_endpoint.h \
 					  video_preview.h video_preview.cpp \
 					  video_v4l2.cpp video_v4l2_list.cpp \
 					  video_v4l2.h video_v4l2_list.h \
-					  video_preferences.h video_preferences.cpp
+					  video_preferences.h video_preferences.cpp \
+					  packet_handle.h packet_handle.cpp
 
 libvideo_la_LIBADD = @LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVDEVICE_LIBS@ @LIBSWSCALE_LIBS@ @LIBAVUTIL_LIBS@ @CCRTP_LIBS@ @UDEV_LIBS@
 
