#9024: fix -g option appears twice in client compilation command

--- a/gnome/configure.ac
+++ b/gnome/configure.ac
@@ -17,7 +17,7 @@ LT_INIT
 
 dnl Only need these for moving to gtk3
 MIGRATION_CFLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_SINGLE_INCLUDES"
-CFLAGS="$CFLAGS -g -Wall -Wextra -Wshadow $MIGRATION_CFLAGS"
+CFLAGS="$CFLAGS -Wall -Wextra -Wshadow $MIGRATION_CFLAGS"
 
 dnl GCONF utilities
 AM_GCONF_SOURCE_2
