--- a/daemon/src/video/Makefile.am
+++ b/daemon/src/video/Makefile.am
@@ -3,16 +3,15 @@ include $(top_srcdir)/globals.mak
 SUBDIRS=test
 
 noinst_LTLIBRARIES = libvideo.la
-libvideo_la_SOURCES = video_endpoint.cpp video_endpoint.h \
-					  libav_utils.cpp libav_utils.h \
-					  video_rtp_session.cpp video_rtp_session.h \
+libvideo_la_SOURCES = video_endpoint.cpp video_endpoint.h libav_utils.cpp \
+					  libav_utils.h video_rtp_session.cpp video_rtp_session.h \
 					  video_send_thread.h video_send_thread.cpp \
 					  video_receive_thread.h video_receive_thread.cpp \
-					  video_preview.h video_preview.cpp \
-					  video_v4l2.cpp video_v4l2_list.cpp \
-					  video_v4l2.h video_v4l2_list.h \
+					  video_preview.h video_preview.cpp video_v4l2.cpp \
+					  video_v4l2_list.cpp video_v4l2.h video_v4l2_list.h \
 					  video_preferences.h video_preferences.cpp \
-					  packet_handle.h packet_handle.cpp
+					  packet_handle.h packet_handle.cpp shared_memory.cpp \
+					  shared_memory.h
 
 libvideo_la_LIBADD = @LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVDEVICE_LIBS@ @LIBSWSCALE_LIBS@ @LIBAVUTIL_LIBS@ @CCRTP_LIBS@ @UDEV_LIBS@
 
