* #9145: replaced calls to deprecated "g_strcasecmp" with utf8_case_cmp
The helper function works with UTF8 strings, however a more optimal
solution is probably possible.

--- a/gnome/tests/Makefile.am
+++ b/gnome/tests/Makefile.am
@@ -9,7 +9,7 @@ SFLPHONE_LIBS = $(top_builddir)/src/contacts/libcontacts.la \
 
 ###########################################################
 
-check_global_SOURCES = check_global.c $(top_srcdir)/src/accountlist.c $(top_srcdir)/src/logger.c
+check_global_SOURCES = check_global.c $(top_srcdir)/src/accountlist.c $(top_srcdir)/src/logger.c $(top_srcdir)/src/str_utils.c
 check_global_CFLAGS = @CHECK_CFLAGS@ @GTK_CFLAGS@ @GLIB_CFLAGS@ @DBUSGLIB_CFLAGS@ @GCONF_CFLAGS@
 check_global_LDADD = $(SFLPHONE_LIBS) @CHECK_LIBS@ @GLIB_LIBS@ @GTK_LIBS@ @DBUSGLIB_LIBS@ @GCONF_LIBS@
 
@@ -42,7 +42,9 @@ check_dbus_SOURCES = check_dbus.c $(top_srcdir)/src/logger.c \
 					 $(top_srcdir)/src/uimanager.c \
 					 $(top_srcdir)/src/conference_obj.c \
 					 $(top_srcdir)/src/shortcuts.c \
-					 $(top_srcdir)/src/imwindow.c
+					 $(top_srcdir)/src/imwindow.c \
+					 $(top_srcdir)/src/str_utils.c
+
 
 check_dbus_CFLAGS = @CHECK_CFLAGS@ @GTK_CFLAGS@ @DBUSGLIB_CFLAGS@ @GCONF_CFLAGS@ @WEBKIT_CFLAGS@
 check_dbus_LDADD = $(SFLPHONE_LIBS) @CHECK_LIBS@ @GCONF_LIBS@ $(top_builddir)/src/widget/libwidget.la $(top_builddir)/src/icons/libicons.la
