--- a/daemon/configure.ac
+++ b/daemon/configure.ac
@@ -25,24 +25,24 @@ AC_CONFIG_MACRO_DIR([m4])
 dnl What to generate
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([libs/Makefile \
-		libs/utilspp/Makefile \
-		libs/utilspp/singleton/Makefile \
-		libs/iax2/Makefile])
+                 libs/utilspp/Makefile \
+                 libs/utilspp/singleton/Makefile \
+                 libs/iax2/Makefile])
 
 AC_CONFIG_FILES([src/Makefile \
-		src/sip/Makefile \
-		src/im/Makefile \
-		src/iax/Makefile \
-		src/audio/Makefile \
-		src/audio/audiortp/Makefile \
-		src/audio/pulseaudio/Makefile \
-		src/audio/alsa/Makefile \
-		src/audio/sound/Makefile \
-		src/audio/codecs/Makefile \
-		src/config/Makefile \
-		src/dbus/Makefile \
-		src/hooks/Makefile \
-		src/history/Makefile])
+        src/sip/Makefile \
+        src/im/Makefile \
+        src/iax/Makefile \
+        src/audio/Makefile \
+        src/audio/audiortp/Makefile \
+        src/audio/pulseaudio/Makefile \
+        src/audio/alsa/Makefile \
+        src/audio/sound/Makefile \
+        src/audio/codecs/Makefile \
+        src/config/Makefile \
+        src/dbus/Makefile \
+        src/hooks/Makefile \
+        src/history/Makefile])
 
 dnl Unit tests section
 AC_CONFIG_FILES([test/Makefile])
@@ -96,17 +96,17 @@ AC_FUNC_MALLOC
 AC_FUNC_MEMCMP
 AC_FUNC_REALLOC
 AC_FUNC_SELECT_ARGTYPES
-	AC_DIAGNOSE([obsolete],[your code may safely assume C89 semantics that RETSIGTYPE is void.
+AC_DIAGNOSE([obsolete],[your code may safely assume C89 semantics that RETSIGTYPE is void.
 Remove this warning and the `AC_CACHE_CHECK' when you adjust the code.])dnl
 AC_CACHE_CHECK([return type of signal handlers],[ac_cv_type_signal],[AC_COMPILE_IFELSE(
 [AC_LANG_PROGRAM([#include <sys/types.h>
 #include <signal.h>
 ],
-		 [return *(signal (0, 0)) (0) == 1;])],
-		   [ac_cv_type_signal=int],
-		   [ac_cv_type_signal=void])])
+         [return *(signal (0, 0)) (0) == 1;])],
+           [ac_cv_type_signal=int],
+           [ac_cv_type_signal=void])])
 AC_DEFINE_UNQUOTED([RETSIGTYPE],[$ac_cv_type_signal],[Define as the return type of signal handlers
-		    (`int' or `void').])
+            (`int' or `void').])
 
 AC_FUNC_STAT
 AC_FUNC_UTIME_NULL
@@ -158,113 +158,81 @@ dnl pkg-config doesn't like 0.6.0-pre1 version number, it assumes that it is
 dnl more recent than (unreleased) 0.6.0
 DBUS_CPP_REQUIRED_VERSION=0.6.0-pre1
 PKG_CHECK_MODULES(DBUSCPP, dbus-c++-1,,
-	AC_MSG_ERROR([You need the DBus-c++ libraries (version $DBUS_CPP_REQUIRED_VERSION or better)]))
+AC_MSG_ERROR([You need the DBus-c++ libraries (version $DBUS_CPP_REQUIRED_VERSION or better)]))
 
 CXXFLAGS="${CXXFLAGS} -g -Wno-return-type -Wall -Wextra -Wnon-virtual-dtor -Weffc++ -Wfatal-errors"
 
-AC_SEARCH_LIBS([XML_ParserCreate_MM], [expat], [], [
-        AC_MSG_ERROR([Unable to find libexpat development files])
+AX_LIB_EXPAT
+
+AC_SEARCH_LIBS([yaml_parser_initialize], [yaml], [], [
+    AC_MSG_ERROR([Unable to find yaml development files])
 ])
 
-xml_CFLAGS=
-xml_LIBS=-lexpat
+AX_PTHREAD
 
-AC_SUBST(xml_CFLAGS)
-AC_SUBST(xml_LIBS)
-
-AC_CHECK_LIB([yaml], yaml_parser_initialize,
-        [AC_CHECK_HEADERS(yaml.h, have_yaml=true, have_yaml=false)],
-        have_yaml=false)
-
-test "$have_yaml" = "false" && AC_MSG_ERROR([libyaml development files missing])
-
-yaml_CFLAGS=
-yaml_LIBS=-lyaml
-AC_SUBST(yaml_CFLAGS)
-AC_SUBST(yaml_LIBS)
-
-AC_CHECK_LIB([pthread], pthread_create,
-		[AC_CHECK_HEADERS(pthread.h, have_pthread=true, have_pthread=false)],
-		have_pthread=false)
-
-test "$have_pthread" = "false" && AC_MSG_ERROR([You need the POSIX Thread library (pthreads)])	
-
-AC_CHECK_LIB([pcre], pcre_free,
-		[AC_CHECK_HEADERS(pcre.h, have_pcre=true, have_pcre=false)],
-		have_pcre=false)
-
-test "$have_pcre" = "false" && AC_MSG_ERROR([You need the Perl-Compatible Regular Expressions library (pcre)])	
-
-PCRE_LIBS=-lpcre
-PCRE_CFLAGS=
-AC_SUBST(PCRE_LIBS)
-AC_SUBST(PCRE_CFLAGS)
+AX_PATH_LIB_PCRE
 
 dnl Check for libcppunit-dev
 CPPUNIT_MIN_VERSION=1.12
 PKG_CHECK_MODULES(CPPUNIT, cppunit >= ${CPPUNIT_MIN_VERSION}, AM_CONDITIONAL(BUILD_TEST, test 1 = 1 ), AM_CONDITIONAL(BUILD_TEST, test 0 = 1 ))
 
-# check for libgsm1 (doesn't use pkg-config)
-	dnl Check for libgsm
+dnl check for libgsm1 (doesn't use pkg-config)
+dnl Check for libgsm
 AC_ARG_WITH([gsm], [AS_HELP_STRING([--without-gsm],
-			[disable support for gsm codec])], [], [with_gsm=yes])
+            [disable support for gsm codec])], [], [with_gsm=yes])
 
 LIBGSM=
 AS_IF([test "x$with_gsm" != xno],
-		[AC_CHECK_HEADER([gsm/gsm.h], , AC_MSG_FAILURE([Unable to find the libgsm1 headers (you may need to install the dev package).  You may use --without-gsm to compile without gsm codec support.]))]
-		[AC_CHECK_LIB([gsm], [gsm_decode],
-			[],
-			[AC_MSG_FAILURE(
-				[libgsm link test failed.   You may use --without-gsm to compile without gsm codec support.])]
-			)
-		]
-	 )
+        [AC_CHECK_HEADER([gsm/gsm.h], , AC_MSG_FAILURE([Unable to find the libgsm1 headers (you may need to install the dev package).  You may use --without-gsm to compile without gsm codec support.]))]
+        [AC_CHECK_LIB([gsm], [gsm_decode], [], [
+            AC_MSG_FAILURE([libgsm link test failed. You may use --without-gsm to compile without gsm codec support.])
+        ])
+    ])
 
 AC_DEFINE_UNQUOTED([HAVE_GSM], `if test "x$with_gsm" = "xyes"; then echo 1; else echo 0; fi`, [Define if you have libgsm])
 AM_CONDITIONAL(BUILD_GSM, test "x$with_gsm" = "xyes" )
 
 dnl Check for libspeex
 AC_ARG_WITH([speex],
-		[AS_HELP_STRING([--without-speex],
-		[disable support for speex codec])],
-		[],
-		[with_speex=yes])
+        [AS_HELP_STRING([--without-speex],
+        [disable support for speex codec])],
+        [],
+        [with_speex=yes])
 
 AS_IF([test "x$with_speex" != xno],
-		[AC_CHECK_HEADER([speex/speex.h], , AC_MSG_FAILURE([Unable to find the libspeex headers (you may need to install the dev package).  You may use --without-speex to compile without speex codec support.]))]
-		[AC_CHECK_LIB([speex], [speex_decode_int],
-		[],
-		[AC_MSG_FAILURE([libspeex link test failed.   You may use --without-speex to compile without speex codec support.])])
-		])
-		
+        [AC_CHECK_HEADER([speex/speex.h], , AC_MSG_FAILURE([Unable to find the libspeex headers (you may need to install the dev package).  You may use --without-speex to compile without speex codec support.]))]
+        [AC_CHECK_LIB([speex], [speex_decode_int],
+        [],
+        [AC_MSG_FAILURE([libspeex link test failed.   You may use --without-speex to compile without speex codec support.])])
+        ])
+
 AC_DEFINE_UNQUOTED([HAVE_SPEEX], `if test "x$with_speex" = "xyes"; then echo 1; else echo 0; fi`, [Define if you have libspeex])
 AM_CONDITIONAL(BUILD_SPEEX, test "x$with_speex" = "xyes" )
 
 dnl check in case the libspeexdsp is not installed
 AC_CHECK_HEADER([speex/speex_preprocess.h], , AC_MSG_FAILURE([Unable to find the libspeexdsp headers (you may need to install the libspeexdsp-dev package) used for Noise Suppression and Automatic Gain Control.]))
-AC_CHECK_LIB(speexdsp, speex_preprocess_run, [], [], [])
+AC_SEARCH_LIBS([speex_preprocess_run], [speexdsp], [], [
+       AC_MSG_ERROR([Unable to find speexdsp development files])
+])
 
 # check for libcelt
-AC_ARG_WITH([celt],
-		[AS_HELP_STRING([--without-celt],
-		[disable support for celt codec])],
-		[],
-		[with_celt=yes])
+AC_ARG_WITH([celt], [AS_HELP_STRING([--without-celt],
+            [disable support for celt codec])], [], [with_celt=yes])
 
 AS_IF([test "x$with_celt" != xno],
-	[PKG_CHECK_MODULES(CELT, celt >= 0.9.1,
-		[
-			with_celt_91=yes; AC_MSG_NOTICE([Using celt 0.9.1])
-    	],
-    	[
-			PKG_CHECK_MODULES(CELT, celt >= 0.7.1,
+    [PKG_CHECK_MODULES(CELT, celt >= 0.9.1,
+        [
+            with_celt_91=yes; AC_MSG_NOTICE([Using celt 0.9.1])
+        ],
+        [
+            PKG_CHECK_MODULES(CELT, celt >= 0.7.1,
             [
                 with_celt_71=yes; AC_MSG_NOTICE([Using celt 0.7.1])
             ],
             [
                 AC_MSG_FAILURE([libcelt link test failed.   You may use --without-celt to compile without celt codec support.])
             ])
-    	])]
+        ])]
 )
 
 AM_CONDITIONAL(BUILD_CELT_91, test "x$with_celt_91" = "xyes" )
@@ -277,9 +245,9 @@ AC_ARG_WITH([iax2], [AS_HELP_STRING([--without-iax2],
 AC_DEFINE_UNQUOTED([HAVE_IAX], `if test "x$with_iax2" = "xyes"; then echo 1; else echo 0;fi`, [Define if you have libiax2])
 AM_CONDITIONAL(USE_IAX, test "x$with_iax2" = "xyes" )
 
-	dnl Check for network-manager
+    dnl Check for network-manager
 AC_ARG_WITH([networkmanager], [AS_HELP_STRING([--without-networkmanager],
-			[disable support for network-manager events])], [],
+            [disable support for network-manager events])], [],
             [with_networkmanager=yes])
 
 AM_CONDITIONAL(USE_NETWORKMANAGER, test "x$with_networkmanager" = "xyes" )
@@ -296,7 +264,7 @@ AC_DEFUN([BB_ENABLE_DOXYGEN],
         AC_PATH_PROG(DOT, dot, , $PATH)
         test x$DOT = x -a "x$enable_dot" = xyes && AC_MSG_ERROR([could not find dot])
     fi
-	AM_CONDITIONAL(ENABLE_DOXYGEN, test x$DOXYGEN = xyes)
+    AM_CONDITIONAL(ENABLE_DOXYGEN, test x$DOXYGEN = xyes)
 ])
 # Acutally perform the doxygen check
 BB_ENABLE_DOXYGEN
