--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -8,7 +8,8 @@ NOFIFY_LIBS = -lnotify
 X11_LIBS = -lX11
 LD_LIBS = -ldl
 
-SFLPHONEGTK_LIBS=./contacts/libcontacts.la ./config/libconfig.la ./dbus/libdbus.la ./widget/libwidget.la ./icons/libicons.la
+SFLPHONEGTK_LIBS=./contacts/libcontacts.la ./config/libconfig.la \
+                 ./dbus/libdbus.la ./widget/libwidget.la ./icons/libicons.la
 
 sflphone_client_gnome_SOURCES = \
   main.c \
@@ -31,15 +32,21 @@ sflphone_client_gnome_SOURCES = \
   str_utils.c
 
 noinst_HEADERS =  actions.h sflnotify.h mainwindow.h dialpad.h codeclist.h \
-                  reqaccount.h sflphone_const.h uimanager.h \
-                  accountlist.h sliders.h statusicon.h callable_obj.h conference_obj.h \
-                  shortcuts.h eel-gconf-extensions.h logger.h imwindow.h unused.h str_utils.h
+                  reqaccount.h sflphone_const.h uimanager.h accountlist.h \
+				  sliders.h statusicon.h callable_obj.h conference_obj.h \
+                  shortcuts.h eel-gconf-extensions.h logger.h imwindow.h \
+				  unused.h str_utils.h
 
-sflphone_client_gnome_LDADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) $(NOTIFY_LIBS) $(SFLPHONEGTK_LIBS) $(X11_LIBS) \
-							  $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) $(LD_LIBS) $(GCONF_LIBS)
+sflphone_client_gnome_LDADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) \
+                              $(NOTIFY_LIBS) $(SFLPHONEGTK_LIBS) $(X11_LIBS) \
+                              $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) \
+                              $(LD_LIBS) $(GCONF_LIBS) \
+                              $(JAVASCRIPT_CORE_GTK_LIBS)
 
-sflphone_client_gnome_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) $(NOTIFY_CFLAGS) $(GTK_CFLAGS) $(X11_CFLAGS) \
-                               $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) $(GCONF_CFLAGS)
+sflphone_client_gnome_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) \
+                               $(NOTIFY_CFLAGS) $(GTK_CFLAGS) $(X11_CFLAGS) \
+                               $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) \
+                               $(GCONF_CFLAGS) $(JAVASCRIPT_CORE_GTK_CFLAGS)
 
 # add symbolic link
 install-exec-local:
