--- a/daemon/configure.ac
+++ b/daemon/configure.ac
@@ -100,7 +100,7 @@ dnl Check for uuid development package - name: uuid-dev
 UUID_MIN_VERSION=1.0
 PKG_CHECK_MODULES(UUID, uuid >= ${UUID_MIN_VERSION}, HAVE_UUID=true, HAVE_UUID=false);
 
-AC_SEARCH_LIBS([yaml_parser_initialize], [yaml], [], [
+AC_SEARCH_LIBS([yaml_parser_initialize], [yaml], [AC_SUBST(YAML_LIBS, -lyaml)], [
        AC_MSG_ERROR([Unable to find yaml development files])])
 
 LIBCRYPTO_MIN_VERSION=1.0
