* #8586: make distcheck was missing a header

--- a/daemon/src/Makefile.am
+++ b/daemon/src/Makefile.am
@@ -49,7 +49,8 @@ noinst_HEADERS = \
 		numbercleaner.h \
 		fileutils.h \
 		noncopyable.h \
-		cc_thread.h
+		cc_thread.h \
+		cc_config.h
 
 libsflphone_la_LIBADD = \
 	$(top_builddir)/libs/iax2/libiax2.la \
