* #9779: dropped CELT support

--- a/daemon/src/audio/codecs/Makefile.am
+++ b/daemon/src/audio/codecs/Makefile.am
@@ -41,34 +41,7 @@ libcodec_speex_ub_so_LDADD = libcodecdescriptor.la
 INSTALL_SPEEX_UB_RULE = install-libcodec_speex_ub_so
 endif
 
-if BUILD_CELT_91
-CELT_LIB = libcodec_celt.so
-libcodec_celt_so_SOURCES = celtcodec.cpp
-libcodec_celt_so_CXXFLAGS = -fPIC -g -Wall -DBUILD_CELT_91
-libcodec_celt_so_LDFLAGS = --shared -lc ${CELT_LIBS}
-libcodec_celt_so_LDADD = libcodecdescriptor.la
-INSTALL_CELT_RULE = install-libcodec_celt_so
-endif
-
-if BUILD_CELT_71
-CELT_LIB = libcodec_celt.so
-libcodec_celt_so_SOURCES = celtcodec.cpp
-libcodec_celt_so_CXXFLAGS = -fPIC -g -Wall -DBUILD_CELT_71
-libcodec_celt_so_LDFLAGS = --shared -lc ${CELT_LIBS}
-libcodec_celt_so_LDADD = libcodecdescriptor.la
-INSTALL_CELT_RULE = install-libcodec_celt_so
-endif
-
-if BUILD_CELT_071
-CELT_LIB = libcodec_celt.so
-libcodec_celt_so_SOURCES = celtcodec.cpp
-libcodec_celt_so_CXXFLAGS = -fPIC -g -Wall -DBUILD_CELT_071 -I${top_srcdir}/src
-libcodec_celt_so_LDFLAGS = --shared -lc ${CELT_LIBS}
-libcodec_celt_so_LDADD = libcodecdescriptor.la
-INSTALL_CELT_RULE = install-libcodec_celt_so
-endif
-
-noinst_PROGRAMS = libcodec_ulaw.so libcodec_alaw.so libcodec_g722.so $(GSM_LIB) $(SPEEX_NB_LIB) $(SPEEX_WB_LIB) $(SPEEX_UB_LIB) $(CELT_LIB)
+noinst_PROGRAMS = libcodec_ulaw.so libcodec_alaw.so libcodec_g722.so $(GSM_LIB) $(SPEEX_NB_LIB) $(SPEEX_WB_LIB) $(SPEEX_UB_LIB)
 
 noinst_HEADERS = audiocodec.h audiocodecfactory.h speexcodec.h g722.h
 
@@ -87,8 +60,8 @@ libcodec_g722_so_CXXFLAGS = -fPIC -g -Wall
 libcodec_g722_so_LDADD = libcodecdescriptor.la
 libcodec_g722_so_LDFLAGS = --shared -lc
 
-install-exec-local:  install-libcodec_ulaw_so install-libcodec_alaw_so install-libcodec_g722_so $(INSTALL_GSM_RULE) $(INSTALL_SPEEX_NB_RULE) $(INSTALL_SPEEX_WB_RULE) $(INSTALL_SPEEX_UB_RULE) $(INSTALL_CELT_RULE) $(INSTALL_ILBC_RULE)
-uninstall-local:  uninstall-libcodec_ulaw_so uninstall-libcodec_alaw_so uninstall-libcodec_g722_so uninstall-libcodec_gsm_so uninstall-libcodec_speex_nb_so uninstall-libcodec_speex_wb_so uninstall-libcodec_speex_ub_so uninstall-libcodec_celt_so
+install-exec-local:  install-libcodec_ulaw_so install-libcodec_alaw_so install-libcodec_g722_so $(INSTALL_GSM_RULE) $(INSTALL_SPEEX_NB_RULE) $(INSTALL_SPEEX_WB_RULE) $(INSTALL_SPEEX_UB_RULE) $(INSTALL_ILBC_RULE)
+uninstall-local:  uninstall-libcodec_ulaw_so uninstall-libcodec_alaw_so uninstall-libcodec_g722_so uninstall-libcodec_gsm_so uninstall-libcodec_speex_nb_so uninstall-libcodec_speex_wb_so uninstall-libcodec_speex_ub_so
 
 
 install-libcodec_ulaw_so: libcodec_ulaw.so
@@ -112,9 +85,6 @@ install-libcodec_speex_wb_so: libcodec_speex_wb.so
 install-libcodec_speex_ub_so: libcodec_speex_ub.so
 	mkdir -p $(sflcodecdir)
 	$(INSTALL_PROGRAM)  libcodec_speex_ub.so $(sflcodecdir)
-install-libcodec_celt_so: libcodec_celt.so
-	mkdir -p $(sflcodecdir)
-	$(INSTALL_PROGRAM)  libcodec_celt.so $(sflcodecdir)
 
 uninstall-libcodec_ulaw_so:
 	rm -f $(sflcodecdir)/libcodec_ulaw.so
@@ -130,7 +100,4 @@ uninstall-libcodec_speex_wb_so:
 	rm -f $(sflcodecdir)/libcodec_speex_wb.so
 uninstall-libcodec_speex_ub_so:
 	rm -f $(sflcodecdir)/libcodec_speex_ub.so
-uninstall-libcodec_celt_so:
-	rm -f $(sflcodecdir)/libcodec_celt.so
-	rm -rf $(sflcodecdir)
 
