--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -21,8 +21,7 @@ endif
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = libs src ringtones man $(TESTS_DIR) doc
 
-EXTRA_DIST = README.gentoo \
-			 m4/libtool.m4 \
+EXTRA_DIST = m4/libtool.m4 \
 			 m4/lt~obsolete.m4 \
 			 m4/ltoptions.m4 \
 			 m4/ltsugar.m4 \
