#10304: Add a specific icons for history entries taht have been recorded

--- a/gnome/pixmaps/Makefile.am
+++ b/gnome/pixmaps/Makefile.am
@@ -20,7 +20,9 @@ buttons_DATA = current.svg \
 				speaker_75.svg \
 				fail.svg \
 				incoming.svg \
+				incoming_rec.svg \
 				outgoing.svg \
+				outgoing_rec.svg \
 				missed.svg \
 				busy.svg \
 				sflphone.svg \
