--- a/tools/build-system/launchpad/sflphone-common/debian/rules
+++ b/tools/build-system/launchpad/sflphone-common/debian/rules
@@ -21,7 +21,7 @@ configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
 	./autogen.sh
-	./configure --prefix=/usr --without-celt
+	./configure --prefix=/usr
 	cd libs/pjproject; ./configure
 	touch configure-stamp
 
