* #12002: video: fix config file serialization/deserialization

--- a/daemon/test/sflphoned-sample.yml
+++ b/daemon/test/sflphoned-sample.yml
@@ -1,7 +1,7 @@
 ---
 accounts:
 - alias: SFL test
-  codecs: 0/3/8/9/110/111/112/
+  audioCodecs: 0/3/8/9/110/111/112/
   credential:
   - Account.password: 1234
     Account.realm:
@@ -44,12 +44,13 @@ accounts:
   type: SIP
   updateContact: false
   username: sfltest
+  videoCodecs:
   zrtp:
     displaySas: true
     displaySasOnce: false
     helloHashEnabled: true
     notSuppWarning: true
-- alias:
+- alias: IP2IP
   codecs: 0/
   credential:
   - password:
@@ -65,7 +66,6 @@ accounts:
   port: 5060
   publishAddr:
   publishPort: 5060
-  registrationExpire: true
   ringtoneEnabled: true
   ringtonePath: /usr/share/sflphone/ringtones/konga.ul
   sameasLocal: true
@@ -105,7 +105,6 @@ preferences:
   notifyMails: false
   order: Account:1328115463/Account:1328115393/Account:1328115062/Account:1316122317/Account:1316122284/Account:1316121900/Account:1316121889/Account:1316121691/Account:1316121662/Account:1316121661/Account:1316121654/Account:1316121611/Account:1316121607/Account:1316121605/Account:1316121602/Account:1312584532/Account:1312398082/Account:1312398066/Account:1309188361/Account:1309187807/Account:1309187723/Account:1309187670/Account:1309187609/Account:1309187081/Account:1308839853/Account:1308839662/Account:1308839447/Account:1308839359/Account:1308839335/Account:1308838875/Account:1308838713/Account:1308838236/Account:1307975440/Account:1307975347/Account:1307974800/Account:1307974672/Account:1307974527/Account:1303487773/Account:1303247743/Account:1302895321/Account:1302892836/Account:1302891834/Account:1302882519/Account:1302207377/Account:1302207262/Account:1302204136/Account:1302204108/Account:1294850905/Account:1294850775/Account:1294850618/Account:1294849651/Account:1294849602/Account:1294849310/Account:1288964768/Account:1288964603/Account:1288964434/Account:1288964141/Account:1288964134/
   portNum: 5060
-  registrationExpire: 180
   searchBarDisplay: true
   zeroConfenable: false
   zoneToneChoice: North America
@@ -150,6 +149,11 @@ audio:
   recordPath:
   volumeMic: 100
   volumeSpkr: 100
+video:
+  v4l2Channel:
+  v4l2Dev:
+  v4l2Rate:
+  v4l2Size:
 shortcuts:
   hangUp:
   pickUp:
