[ #11886 ] Add basic reverse peer naming support

--- a/daemon/src/history/Makefile.am
+++ b/daemon/src/history/Makefile.am
@@ -2,8 +2,10 @@ include ../../globals.mak
 
 noinst_LTLIBRARIES = libhistory.la
 
-libhistory_la_SOURCES = \
-    historyitem.h       \
-    historyitem.cpp     \
-    history.h           \
-    history.cpp
+libhistory_la_SOURCES =   \
+    historyitem.h         \
+    historyitem.cpp       \
+    history.h             \
+    history.cpp           \
+    historynamecache.h    \
+    historynamecache.cpp
