#12070: Add --without-pulse option

--- a/daemon/configure.ac
+++ b/daemon/configure.ac
@@ -106,7 +106,14 @@ PKG_CHECK_MODULES(ALSA, alsa >= ${ALSA_MIN_VERSION},, AC_MSG_ERROR([Missing alsa
 
 dnl Check for pulseaudio development package - name: libpulse-dev
 LIBPULSE_MIN_VERSION=0.9.15
-PKG_CHECK_MODULES(PULSEAUDIO, libpulse >= ${LIBPULSE_MIN_VERSION},, AC_MSG_ERROR([Missing pulseaudio development package: libpulse-dev]))
+AC_ARG_WITH([pulse],
+	[ AS_HELP_STRING([--without-pulse], [disable support for pulseaudio]) ],
+	[],
+	[with_pulse=yes])
+
+AS_IF([test "x$with_pulse" = "xyes"], [
+	PKG_CHECK_MODULES(PULSEAUDIO, libpulse >= ${LIBPULSE_MIN_VERSION},, AC_MSG_ERROR([Missing pulseaudio development package: libpulse-dev]))
+      ]);
 
 dnl Check for the samplerate development package - name: libsamplerate0-dev
 LIBSAMPLERATE_MIN_VERSION=0.1.2
