#12071: Make pulseaudio optional at configuration time

--- a/daemon/configure.ac
+++ b/daemon/configure.ac
@@ -115,6 +115,9 @@ AS_IF([test "x$with_pulse" = "xyes"], [
 	PKG_CHECK_MODULES(PULSEAUDIO, libpulse >= ${LIBPULSE_MIN_VERSION},, AC_MSG_ERROR([Missing pulseaudio development package: libpulse-dev]))
       ]);
 
+AC_DEFINE_UNQUOTED([HAVE_PULSE], `if test "x$with_pulse" = "xyes"; then echo 1; else echo 0; fi`, [Define if you have pulseaudio])
+AM_CONDITIONAL(BUILD_PULSE, test "x$with_pulse" = "xyes" )
+
 dnl Check for the samplerate development package - name: libsamplerate0-dev
 LIBSAMPLERATE_MIN_VERSION=0.1.2
 PKG_CHECK_MODULES(SAMPLERATE, samplerate >= ${LIBSAMPLERATE_MIN_VERSION},, AC_MSG_ERROR([Missing libsamplerate development package: libsamplerate0-dev]))
