--- a/daemon/src/audio/pulseaudio/Makefile.am
+++ b/daemon/src/audio/pulseaudio/Makefile.am
@@ -1,5 +1,7 @@
 include $(top_srcdir)/globals.mak
 
+if BUILD_PULSE
+
 noinst_LTLIBRARIES = libpulselayer.la
 
 libpulselayer_la_SOURCES = \
@@ -11,3 +13,4 @@ noinst_HEADERS = \
 		audiostream.h \
 		pulselayer.h
 
+endif
