* #12329: gnome: build and reuse libsflphone_client_gnome.la for make and make check

--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -2,6 +2,16 @@ include ../globals.mak
 
 bin_PROGRAMS = sflphone-client-gnome
 
+SFLPHONEGTK_LIBS=./contacts/libcontacts.la ./config/libconfig.la \
+                 ./dbus/libdbus.la ./widget/libwidget.la ./icons/libicons.la
+
+sflphone_client_gnome_SOURCES = main.c
+sflphone_client_gnome_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
+                               @GTK_CFLAGS@ @WEBKIT_CFLAGS@ \
+                               @GCONF_CFLAGS@ @JAVASCRIPT_CORE_GTK_CFLAGS@ \
+                               @GTHREAD_CFLAGS@
+sflphone_client_gnome_LDADD = ./libsflphone_client.la $(SFLPHONEGTK_LIBS) $(LD_LIBS)
+
 SUBDIRS = config contacts dbus widget icons
 if SFL_VIDEO
 SUBDIRS += video
@@ -10,16 +20,13 @@ endif
 NOFIFY_LIBS = -lnotify
 LD_LIBS = -ldl
 
-SFLPHONEGTK_LIBS=./contacts/libcontacts.la ./config/libconfig.la \
-                 ./dbus/libdbus.la ./widget/libwidget.la ./icons/libicons.la
-
 if SFL_VIDEO
 SFLPHONEGTK_LIBS+=./video/libvideo.la
 endif
 
+noinst_LTLIBRARIES = libsflphone_client.la
 
-sflphone_client_gnome_SOURCES = \
-  main.c \
+libsflphone_client_la_SOURCES = \
   logger.c \
   uimanager.c \
   sflnotify.c \
@@ -33,30 +40,42 @@ sflphone_client_gnome_SOURCES = \
   sliders.c \
   statusicon.c \
   codeclist.c \
-  reqaccount.c \
   eel-gconf-extensions.c \
   shortcuts.c \
   str_utils.c \
   seekslider.c \
-  gtk2_wrappers.c
+  gtk2_wrappers.c \
+  actions.h \
+  sflnotify.h \
+  mainwindow.h \
+  dialpad.h \
+  codeclist.h \
+  sflphone_const.h \
+  uimanager.h \
+  accountlist.h \
+  sliders.h \
+  statusicon.h \
+  callable_obj.h \
+  conference_obj.h \
+  shortcuts.h \
+  eel-gconf-extensions.h \
+  logger.h \
+  imwindow.h \
+  unused.h \
+  str_utils.h \
+  gtk2_wrappers.h \
+  seekslider.h
 
-noinst_HEADERS =  actions.h sflnotify.h mainwindow.h dialpad.h codeclist.h \
-                  reqaccount.h sflphone_const.h uimanager.h accountlist.h \
-                  sliders.h statusicon.h callable_obj.h conference_obj.h \
-                  shortcuts.h eel-gconf-extensions.h logger.h imwindow.h \
-                  unused.h str_utils.h gtk2_wrappers.h
+libsflphone_client_la_LDFLAGS = @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
+                                @NOTIFY_LIBS@ $(SFLPHONEGTK_LIBS) @X11_LIBS@ \
+                                @GTK_LIBS@ @GLIB_LIBS@ @WEBKIT_LIBS@ \
+                                $(LD_LIBS) @GCONF_LIBS@ \
+                                @JAVASCRIPT_CORE_GTK_LIBS@ @GTHREAD_LIBS@
 
-sflphone_client_gnome_LDADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) \
-                              $(NOTIFY_LIBS) $(SFLPHONEGTK_LIBS) $(X11_LIBS) \
-                              $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) \
-                              $(LD_LIBS) $(GCONF_LIBS) \
-                              $(JAVASCRIPT_CORE_GTK_LIBS) $(GTHREAD_LIBS)
-
-sflphone_client_gnome_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) \
-                               $(NOTIFY_CFLAGS) $(GTK_CFLAGS) $(X11_CFLAGS) \
-                               $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) \
-                               $(GCONF_CFLAGS) $(JAVASCRIPT_CORE_GTK_CFLAGS) \
-                               $(GTHREAD_CFLAGS)
+libsflphone_client_la_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
+                               @GTK_CFLAGS@ @WEBKIT_CFLAGS@ \
+                               @GCONF_CFLAGS@ @JAVASCRIPT_CORE_GTK_CFLAGS@ \
+                               @GTHREAD_CFLAGS@
 
 # add symbolic link
 install-exec-local:
@@ -65,5 +84,3 @@ install-exec-local:
 
 uninstall-local:
 	-test -h $(DESTDIR)$(bindir)/sflphone && rm $(DESTDIR)$(bindir)/sflphone
-
-# all: indent
