--- a/tools/build-system/launchpad/sflphone-client-kde/debian/control
+++ b/tools/build-system/launchpad/sflphone-client-kde/debian/control
@@ -8,5 +8,5 @@ Homepage: http://www.sfphone.org/
 
 Package: sflphone-client-kde
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-dbus, kdelibs5, kdepimlibs5
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-dbus, kdelibs5, kdepimlibs5, sflphone-daemon
 Description:KDE client for the sflphone-daemon SIP/AiX softphone
