--- a/gnome/src/video/Makefile.am
+++ b/gnome/src/video/Makefile.am
@@ -2,7 +2,7 @@ include ../../globals.mak
 
 noinst_LTLIBRARIES = libvideo.la
 
-libvideo_la_SOURCES = video_renderer.c
+libvideo_la_SOURCES = video_renderer.c video_renderer.h shm_header.h
 
 libvideo_la_LDFLAGS = @CLUTTER_LDFLAGS@ @CLUTTERGTK_LDFLAGS@
 
